# showcase-uv-renovate

./: pyproject.toml  renovate.json5
